@@ -96,7 +96,7 @@ void __glcGlyphDestroyTexture(__GLCglyph* This, __GLCcontext* inContext)
 void __glcGlyphDestroyGLObjects(__GLCglyph* This, __GLCcontext* inContext)
 {
   if (This->glObject[1]) {
-    __glcDeleteAtlasElement(This->textureObject, inContext);
+    __glcReleaseAtlasElement(This->textureObject, inContext);
     __glcGlyphDestroyTexture(This, inContext);
   }
 
